fixing filepath